# CloudMulti

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.prebuilt  README.md  docker-compose.yml
.github/workflows/: docker.yml
migrations/: 20260718000000_init.sql
public/: app.js  index.html  styles.css
src/: error.rs  lib.rs  main.rs  models.rs  routes.rs  state.rs
src/cloudflare/: client.rs  mod.rs  models.rs
src/crypto/: mod.rs
src/db/: mod.rs
src/handlers/: accounts.rs  analytics.rs  dns.rs  mod.rs  quick_ops.rs  settings.rs  tunnels.rs  zones.rs
tests/: api_tests.rs
