[package]
name = "cloudflare-dashboard-backend"
version = "0.1.0"
edition = "2021"
authors = ["Self-Hosted Cloudflare Dashboard Team"]
description = "Lightweight, secure, self-hosted multi-account Cloudflare Dashboard backend in Rust"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "migrate"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
thiserror = "1"
dotenvy = "0.15"
hex = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
